# renforge-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MCP_AGENT_IMPROVEMENTS.md  README.md  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  MCP.md
examples/demo_game/game/: options.rpy  script.rpy
examples/demo_game/game/tl/french/: common.rpy  options.rpy  screens.rpy  script.rpy
scripts/: seed_ui_qa_fixture.py
src/renforge/: __init__.py  activity_log.py  assets.py  autopilot.py  build.py  cli.py  dashboard_client.py  docs.py  dump.py  effect_wait.py  image_ops.py  launch_env.py  lint.py  navigation.py  project.py  scanner.py  sdk.py  server.py  session_registry.py  state_compact.py  symbols.py  translation.py
src/renforge/ast_probe/: probe.rpy
src/renforge/bridge/: __init__.py  bridge.rpy  client.py  launcher.py
src/renforge/tools/: __init__.py  live.py  project_ops.py  static.py
src/renforge/ui/: __init__.py  activity.py  graph.py  poller.py  server.py  ws.py
src/renforge/ui/static/: index.html
src/renforge/ui/static/assets/: index-2fv_IzQq.js  index-49ngt_11.js  index-B0Byf6DB.css  index-B3n6E3hr.css  index-B4I7wiHo.js  index-B9x2zbHG.js  index-BDAK3A4g.js  index-BI-XubKM.js  index-BPNpfKqF.css  (+32 more)
src/renforge/util/: __init__.py  files.py  subprocess.py
tests/: test_assets.py  test_autopilot.py  test_bridge_client.py  test_bridge_launcher.py  test_bridge_resources.py  test_bridge_runtime.py  test_build.py  test_cli.py  test_dashboard_client.py  test_docs.py  test_effect_wait.py  test_image_ops.py  test_integration_sdk.py  test_launch_env.py  test_lint.py  test_live_errors.py  test_live_game_state.py  test_live_screen.py  test_live_send_input.py  test_live_stop.py  test_project.py  test_run_scenario.py  test_scanner.py  test_sdk.py  test_server.py  test_session_registry.py  test_state_compact.py  test_symbols.py  test_tools_static.py  test_translation.py  test_ui_backend.py  test_wait_until.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  api.ts  styles.css  types.ts
ui/src/components/: ProjectPicker.tsx
ui/src/hooks/: useWebSocket.ts
ui/src/pages/: AssetsPage.tsx  DebuggerPage.tsx  DiagnosticsPage.tsx  EditorPage.tsx  LivePage.tsx  StoryMapPage.tsx  TimelinePage.tsx  TranslationPage.tsx
