[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "renforge"
version = "0.1.0"
description = "RenForge MCP foundation for Ren'Py project workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RenForge contributors" }]
dependencies = [
  "mcp>=1.0.0"
]

[project.optional-dependencies]
fastmcp = ["fastmcp>=2.0.0"]
test = ["pytest>=8"]
ui = ["starlette>=0.31", "uvicorn[standard]>=0.30", "watchfiles>=0.22"]

[project.scripts]
renforge = "renforge.cli:main"

[tool.hatch.build]
include = ["src/renforge", "src/renforge/**/*.rpy", "src/renforge/ui/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/renforge"]

[tool.hatch.build.targets.sdist]
include = ["src/renforge"]

[tool.pytest.ini_options]
pythonpath = ["src"]
