[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "renforge"
version = "0.5.0"
description = "MCP server, CLI, and web dashboard for Ren'Py visual-novel development"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RenForge contributors" }]
keywords = ["renpy", "mcp", "model-context-protocol", "visual-novel", "game-dev"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "mcp>=1.0.0",
  "fastmcp>=2.0.0",
  "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/alex-jordan547/renforge-mcp"
Repository = "https://github.com/alex-jordan547/renforge-mcp"
Issues = "https://github.com/alex-jordan547/renforge-mcp/issues"

[project.optional-dependencies]
fastmcp = []
test = ["pytest>=8"]
ui = ["starlette>=0.31", "uvicorn[standard]>=0.30", "watchfiles>=0.22"]

[project.scripts]
renforge = "renforge.cli:main"

[tool.hatch.build]
include = ["src/renforge", "src/renforge/**/*.rpy", "src/renforge/ui/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/renforge"]

[tool.hatch.build.targets.sdist]
include = ["src/renforge"]

[tool.pytest.ini_options]
pythonpath = ["src"]
